# beeware-sudoku-app

./: .pre-commit-config.yaml  .venv  README.md  pyproject.toml  requirements.txt
docs/: project_specific_setup.md  using_poetry.md
gptsudokupromptchallenge/: CHANGELOG  LICENSE  README.rst  pyproject.toml
gptsudokupromptchallenge/src/gptsudokupromptchallenge/: __main__.py  app.py
gptsudokupromptchallenge/tests/: gptsudokupromptchallenge.py  test_app.py
tests/: test_gpt_sudoku_app.py
