###########
# 📜 Poetry
###########
[tool.poetry]
name = "gpt_sudoku_app"
version = "0.1.0"
description = "BeeWare (cross-platform hopefully) app which allows to solve manifold.markets gpt-4 sudoku prompt challenge"
authors = ["Jamie Coombes <jamie@coefficient.ai>"]
license = "UNLICENSED"
classifiers = ["Private :: Do Not Upload"]
packages = [
  { include = "gpt_sudoku_app", from = "gpt_sudoku_app" },
  # Add more packages here, e.g.
  # { include = "module_name", from = "gpt_sudoku_app" },
]

[tool.poetry.dependencies]
python = "^3.11.1"
# Everything below here is alphabetically sorted
openai = "^0.27.9"
beeware = "^0.3.0"
briefcase = "^0.3.15"

[tool.poetry.dev-dependencies]
# Everything below here is alphabetically sorted
bandit = "^1.7.5"
black = "^23.3.0"
detect-secrets = "1.2.0"
flake8 = "5.0.4"
flake8-bugbear = "^23.3.12"
flake8-comprehensions = "^3.12.0"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.4.0"
flake8-fixme = "^1.1.1"
flake8-implicit-str-concat = "^0.4.0"
flake8-mutable = "^1.2.0"
flake8-no-pep420 = "^2.4.0"
flake8-print = "^5.0.0"
flake8-return = "^1.2.0"
flake8-simplify = "^0.20.0"
ipdb = "^0.13.13"
isort = "^5.12.0"
jupyter-black = "^0.3.4"
pip-audit = "^2.5.5"
pre-commit = "^3.3.2"
pylint = "^2.17.4"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

############
# ✅ Linters
############
[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
default_section = "THIRDPARTY"
known_first_party = ["gpt_sudoku_app"]
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
add_imports = "from __future__ import annotations"

[tool.pylint.MASTER]
ignore-paths = [".git"]
load-plugins = []

[tool.pylint."MESSAGES CONTROL"]
enable = "all"
max-module-lines = 2000
max-line-length = 100
max-locals = 50
min-similarity-lines = 150
max-statements = 89
max-args = 22
max-branches = 17
# good-names = []
# disable = []
logging-format-style = "new"

##############
# 📣 Towncrier
##############

